--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@expo/vector-icons": "^10.0.3",
     "@react-navigation/web": "^1.0.0-alpha.9",
     "amazon-cognito-identity-js": "^3.0.15",
+    "assets": "^3.0.1",
     "aws-amplify": "^1.1.36",
     "aws-amplify-react-native": "^2.1.16",
     "expo": "^34.0.1",
@@ -28,6 +29,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
     "react-native-elements": "^1.1.0",
     "react-native-gesture-handler": "~1.3.0",
+    "react-native-paper": "^2.16.0",
     "react-native-web": "^0.11.4",
     "react-navigation": "^3.11.0"
   },
