--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -11,5 +11,14 @@
 			"service": "Pinpoint",
 			"providerPlugin": "awscloudformation"
 		}
+	},
+	"api": {
+		"danceacademy": {
+			"service": "AppSync",
+			"providerPlugin": "awscloudformation",
+			"output": {
+				"securityType": "AMAZON_COGNITO_USER_POOLS"
+			}
+		}
 	}
 }
