--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@expo/samples": "~3.0.3",
     "@expo/vector-icons": "^10.0.3",
     "@react-navigation/web": "^1.0.0-alpha.9",
+    "@shoutem/animation": "^0.12.3",
+    "@shoutem/ui": "^1.0.1",
     "amazon-cognito-identity-js": "^3.0.15",
     "assets": "^3.0.1",
     "aws-amplify": "^1.1.36",
