--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
     "react-native-elements": "^1.1.0",
     "react-native-gesture-handler": "~1.3.0",
+    "react-native-gifted-chat": "^0.9.11",
     "react-native-paper": "^2.16.0",
+    "react-native-video": "^5.0.2",
     "react-native-web": "^0.11.4",
     "react-navigation": "^3.11.0"
   },
