--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "aws-amplify-react-native": "^2.1.16",
     "expo": "^34.0.1",
     "expo-asset": "^6.0.0",
+    "expo-cli": "^3.1.0",
     "expo-constants": "6.0.0",
     "expo-font": "~6.0.0",
     "expo-web-browser": "6.0.0",
