--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-native-paper": "^2.16.0",
     "react-native-video": "^5.0.2",
     "react-native-web": "^0.11.4",
-    "react-navigation": "^3.11.0"
+    "react-navigation": "^3.11.0",
+    "youtube-v3-api": "^1.1.1"
   },
   "devDependencies": {
     "babel-preset-expo": "^6.0.0",
