--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "expo-cli": "^3.1.0",
     "expo-constants": "6.0.0",
     "expo-font": "~6.0.0",
+    "expo-media-library": "^6.0.0",
+    "expo-permissions": "^6.0.0",
     "expo-web-browser": "6.0.0",
     "moment": "^2.24.0",
     "react": "16.8.3",
