--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,19 +1,21 @@
-on: push
-name: Install and Publish
+name: Expo Publish
+on:
+  push:
+    branches:
+      - master
 jobs:
-  install:
-    name: Install
+  publish:
+    name: Install and publish
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
-    - name: Install
-      uses: actions/npm@master
-      with:
-        args: install
-    - name: Publish
-      uses: expo/expo-github-action@3.0.0
-      env:
-        EXPO_CLI_PASSWORD: ${{ secrets.EXPO_CLI_PASSWORD }}
-        EXPO_CLI_USERNAME: ${{ secrets.EXPO_CLI_USERNAME }}
-      with:
-        args: publish
+      - uses: actions/checkout@v1
+      - uses: actions/setup-node@v1
+        with:
+          node-version: 12.x
+      - uses: expo/expo-github-action@v4
+        with:
+          expo-version: 3.x
+          expo-username: ${{ secrets.EXPO_CLI_USERNAME }}
+          expo-password: ${{ secrets.EXPO_CLI_PASSWORD }}
+      - run: npm ci
+      - run: expo publish ---release-channel staging
