--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -4,21 +4,6 @@ on:
     branches:
       - master
 jobs:
-  fail:
-    name: Install and publish (fail)
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v1
-      - uses: actions/setup-node@v1
-        with:
-          node-version: 12.x
-      - run: npm ci
-      - uses: docker://bycedric/expo-cli:3
-        with:
-          args: publish
-        env:
-          EXPO_CLI_USERNAME: ${{ secrets.EXPO_CLI_USERNAME }}
-          EXPO_CLI_PASSWORD: ${{ secrets.EXPO_CLI_PASSWORD }}
   publish:
     name: Install and publish
     runs-on: ubuntu-latest
@@ -27,10 +12,10 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 12.x
-      - run: npm ci
-      - uses: docker://bycedric/expo-cli-fix-inotify:debug
+      - uses: bycedric/expo-github-action@fix/patch-watchers
         with:
-          args: publish
-        env:
-          EXPO_CLI_USERNAME: ${{ secrets.EXPO_CLI_USERNAME }}
-          EXPO_CLI_PASSWORD: ${{ secrets.EXPO_CLI_PASSWORD }}
+          expo-version: 3.x
+          expo-username: ${{ secrets.EXPO_CLI_USERNAME }}
+          expo-password: ${{ secrets.EXPO_CLI_PASSWORD }}
+      - run: npm ci
+      - run: expo publish
